added find get service by name and get all permission of a user
